fixed overlapping nonsense

--- a/index.css
+++ b/index.css
@@ -60,20 +60,17 @@
 
 #cards {
     display: flex;
-    flex-wrap: wrap;
     gap: 8px;
     max-width: 916px;
     width: calc(100% - 20px);
+    max-height: calc(100% - 100px);
+    overflow: scroll;
 }
 
 .card {
-    background-color: #FFFFFF0A;
     border-radius: 10px;
     cursor: pointer;
-    display: flex;
     height: 260px;
-    flex-direction: column;
-    position: relative;
     width: 300px;
 }
 
